--- a/product2.html
+++ b/product2.html
@@ -252,7 +252,7 @@
                         <li class="product-path-item">
                             <a class="product-path-link" href="">Máy ảnh không gương lật</a><i class="product-path-icon fa-solid fa-chevron-right"></i>
                         </li>
-                        <li class="product-path-item-current-name ">Máy ảnh Canon EOS RP ( Body / Kit )</li>
+                        <li class="product-path-item-current-name ">Máy ảnh CANON EOS M + Kit cũ</li>
                     </ul>
                 </div>
                 <div class="product-content">
@@ -261,14 +261,15 @@
                             <div class="product-image">
                                 <div class="product-image-preview">
                                     <div class="product-image-preview-top">
-                                        <img class="product-image-preview-top-img" src="https://down-vn.img.susercontent.com/file/b85cecd1da8d985c969009c2c60321f0" alt="">
+                                        <img class="product-image-preview-top-img" src="https://down-vn.img.susercontent.com/file/vn-11134207-7qukw-lje44ek5qxhoec" alt="">
                                         <!-- <img class="product-image-preview-top-img1" src="https://down-vn.img.susercontent.com/file/vn-50009109-d851329f3c4a8c69292bbb5fd791186b" alt=""> -->
                                     </div>
                                     <div class="product-image-preview-bottom">
-                                        <img class="product-image-preview-bottom-img" src="https://down-vn.img.susercontent.com/file/b85cecd1da8d985c969009c2c60321f0_tn" onmouseover="displayLargeImage(this)" alt="">
-                                        <img class="product-image-preview-bottom-img" src="https://down-vn.img.susercontent.com/file/2e7be73cef259506f59e4af57b2f92c3_tn" onmouseover="displayLargeImage(this)" alt="">
-                                        <img class="product-image-preview-bottom-img" src="https://down-vn.img.susercontent.com/file/aaba81687348073a06707f5350642f8c_tn" onmouseover="displayLargeImage(this)" alt="">
-                                        <img class="product-image-preview-bottom-img" src="https://down-vn.img.susercontent.com/file/21a21e8f228754d10ad68aa8a00ff6ff_tn" onmouseover="displayLargeImage(this)" alt="">
+                                        <img class="product-image-preview-bottom-img" src="https://down-vn.img.susercontent.com/file/vn-11134207-7qukw-lje44ek5qxhoec_tn" onmouseover="displayLargeImage(this)" alt="">
+                                        <img class="product-image-preview-bottom-img" src="https://down-vn.img.susercontent.com/file/vn-11134207-7qukw-lje44ekfqivgff_tn" onmouseover="displayLargeImage(this)" alt="">
+                                        <img class="product-image-preview-bottom-img" src="https://down-vn.img.susercontent.com/file/vn-11134207-7qukw-lje44ekfqjf6c7_tn" onmouseover="displayLargeImage(this)" alt="">
+                                        <img class="product-image-preview-bottom-img" src="https://down-vn.img.susercontent.com/file/vn-11134207-7qukw-lje44ek66eaa79_tn" onmouseover="displayLargeImage(this)" alt="">
+                                        <img class="product-image-preview-bottom-img" src="https://down-vn.img.susercontent.com/file/vn-11134207-7qukw-lje44ek66dqkde_tn" onmouseover="displayLargeImage(this)" alt="">
                                     </div>
                                 </div>
                                 <div class="product-likesrate">
@@ -280,37 +281,37 @@
                             <div class="product-info">
                                 <!-- <div class="product-info-favorite">
                                     <span>Yêu thích</span></div> -->
-                                <span class="product-info-name">Máy ảnh Canon EOS RP ( Body / Kit )</span>
+                                <span class="product-info-name">Máy ảnh CANON EOS M + Kit cũ</span>
                                 <div class="product-soldcount">
                                     <span class="product-soldcount-rate">Chưa Có Đánh Giá</span>
                                     <div class="product-soldcount-num">
-                                        <span class="product-soldcount-num-number">5</span>
+                                        <span class="product-soldcount-num-number">1</span>
                                         <span class="product-soldcount-num-text">Đã Bán</span>
                                     </div>
                                     <button class="product-soldcount-report">Tố Cáo</button>
                                 </div>
-                                <div class="product-price">₫29.590.000 - ₫62.370.000</div>
+                                <div class="product-price">₫4.050.000</div>
                                 <div class="product-contain">
-                                    <div class="product-contain-coupon">
+                                    <!-- <div class="product-contain-coupon">
                                         <div class="product-contain-coupon-lable">Mã Giảm Giá Của Shop</div>
                                         <div class="product-contain-coupon-mini">
                                             <span class="product-contain-coupon-ticket">Giảm ₫300k</span>
                                             <span class="product-contain-coupon-ticket">Giảm ₫10k</span>
                                         </div>
-                                    </div>
-                                    <div class="product-contain-installment">
+                                    </div> -->
+                                    <!-- <div class="product-contain-installment">
                                         <div class="product-contain-installment-lable">0% TRẢ GÓP</div>
                                         <div class="product-contain-installment-contain">12 tháng x ₫2.465.833 (Lãi suất 0%)</div>
                                         <button class="product-contain-installment-btn">Xem thêm
                                             <i class="product-contain-installment-icon fa-solid fa-angle-right fa-sm"></i>
                                         </button>
-                                    </div>
-                                    <div class="product-contain-insurance">
+                                    </div> -->
+                                    <!-- <div class="product-contain-insurance">
                                         <div class="product-contain-insurance-lable">Bảo Hiểm</div>
                                         <div class="product-contain-insurance-contain">Bảo hiểm Thiết bị điện tử</div>
                                         <div class="product-contain-insurance-icon">Mới</div>
                                         <a href="" class="product-contain-insurance-link">Tìm hiểu thêm</a>
-                                    </div>
+                                    </div> -->
                                     <div class="product-contain-shipping">
                                         <div class="product-contain-shipping-lable">Vận Chuyển</div>
                                         <div class="product-contain-shipping-contain">
@@ -338,11 +339,11 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="product-contain-classify">
+                                    <!-- <div class="product-contain-classify">
                                         <div class="product-contain-classify-lable">Phân Loại</div>
                                         <button class="product-contain-classify-btn" onclick="selectButton(this)">Body</button>
                                         <button class="product-contain-classify-btn" onclick="selectButton(this)">Kit RF 24-105</button>
-                                    </div>
+                                    </div> -->
                                     <div class="product-contain-classify-quantity">
                                         <div class="product-contain-classify-quantity-lable">Số Lượng</div>
                                         <button class="product-contain-classify-quantity-btn" onclick="changeQuantity(-1)">
@@ -352,7 +353,7 @@
                                         <button class="product-contain-classify-quantity-btn" onclick="changeQuantity(1)">
                                             <i class="product-contain-classify-quantity-btn-plus fa-solid fa-plus"></i>
                                         </button>
-                                        <div class="product-contain-classify-quantity-remain">10 sản phẩm có sẵn</div>
+                                        <div class="product-contain-classify-quantity-remain">1 sản phẩm có sẵn</div>
                                     </div>
                                     <div class="product-contain-buy-options">
                                         <button class="product-contain-puttocart">
@@ -402,19 +403,19 @@
                                         </li>
                                         <li class="product-specification-details-item">
                                             <div class="product-specification-details-item-lable">Hạn bảo hành</div>
-                                            <div class="product-specification-details-item-content">24 tháng</div>
+                                            <div class="product-specification-details-item-content">3 tháng</div>
                                         </li>
                                         <li class="product-specification-details-item">
                                             <div class="product-specification-details-item-lable">Loại bảo hành</div>
-                                            <div class="product-specification-details-item-content">Bảo hành nhà sản xuất</div>
+                                            <div class="product-specification-details-item-content">Bảo hành cửa hàng</div>
                                         </li>
                                         <li class="product-specification-details-item">
-                                            <div class="product-specification-details-item-lable">Trọng lượng</div>
-                                            <div class="product-specification-details-item-content">500g</div>
+                                            <div class="product-specification-details-item-lable">Loại pin</div>
+                                            <div class="product-specification-details-item-content">Khác</div>
                                         </li>
                                         <li class="product-specification-details-item">
                                             <div class="product-specification-details-item-lable">Kho hàng</div>
-                                            <div class="product-specification-details-item-content">20</div>
+                                            <div class="product-specification-details-item-content">1</div>
                                         </li>
                                         <li class="product-specification-details-item">
                                             <div class="product-specification-details-item-lable">Gửi từ</div>
@@ -425,19 +426,24 @@
                                 <div class="product-specification-details-bottom">
                                     <header class="product-specification-details-header">MÔ TẢ SẢN PHẨM</header>
                                     <div class="product-specification-details-item-describe">
-                                        <p class="product-specification-details-item-describe-paragraph">TÍNH NĂNG NỔI BẬT 
-                                            Cảm biến CMOS full-frame 26.2 megapixels
-                                            Bộ xử lý hình ảnh DIGIC 8
-                                            - 4.779 vị trí lấy nét chọn lọc
-                                            Màn hình LCD 3.0inch cảm ứng
-                                            Tốc độ màn trập	30 1/4000 giây
-                                            Tốc độ chụp	5 ảnh/ giây
-                                            Độ nhạy sáng ISO 100 40000 (mở rộng 102400)
-                                            Quay phim 4K 3840 x 2160 (30p)
-                                            Chống rung quang học kép Dual Sensing IS
-                                            Tích hợp Wifi/ Bluetooth
-                                            Trọng lượng	485g (thân máy)
-                                            Pin tương thích	LP-E17
+                                        <p class="product-specification-details-item-describe-paragraph">CANON EOS M + Kit cũ
+                                            Phụ kiện: pin+sạc+dây đeo+thẻ nhớ
+                                            Bảo hành 3 tháng
+                                            Tình trạng: ngoại khá, mọi chức năng hoạt động tốt hết
+                                            
+                                            Thông số kỹ thuật:
+                                            - Cảm biến APS-C CMOS độ phân giải 18.0 Megapixels
+                                            - ISO 100-25.600, chụp liên tiếp 4.3 hình/s
+                                            - Khả năng khử nhiễu tiên tiến với bộ xử lý DIGIC V
+                                            - Hệ thống lấy nét Canon Hybrid AF 31 điểm mới nhất
+                                            - Quay phim Full HD âm thanh Stereo, kết nối HDMI
+                                            - Tương thích với các ống kính EF-M, EF, EF-S
+                                            - Màn hình cảm ứng 3.0” độ phân giải 1.040K pixel
+                                            
+                                            📷 MÁY ẢNH HOÀNG TÔ - Chuyên máy ảnh, ống kính cũ.
+                                            🏠 Địa chỉ: 1025/27A Cách Mạng Tháng 8, phường 7, quận Tân Bình
+                                            🏆 Thời gian làm việc: Thứ 2 – Thứ 7 (9h – 19h), Chủ nhật (9h-17h)
+                                            📞 Phone: 0909860910 (Zalo, Viber, SMS) (vui lòng liên hệ trước khi tới)
                                         </p>
                                     </div>
                                 </div>
