--- a/product3.html
+++ b/product3.html
@@ -247,12 +247,12 @@
                             <a class="product-path-link" href="/shop.html">Máy Ảnh & Máy Quay Phim</a><i class="product-path-icon fa-solid fa-chevron-right"></i>
                         </li>
                         <li class="product-path-item">
-                            <a class="product-path-link" href="">Máy ảnh - Máy quay phim</a><i class="product-path-icon fa-solid fa-chevron-right"></i>
+                            <a class="product-path-link" href="">Phụ kiện máy ảnh</a><i class="product-path-icon fa-solid fa-chevron-right"></i>
                         </li>
                         <li class="product-path-item">
-                            <a class="product-path-link" href="">Máy ảnh không gương lật</a><i class="product-path-icon fa-solid fa-chevron-right"></i>
+                            <a class="product-path-link" href="">Dụng cụ vệ sinh máy ảnh</a><i class="product-path-icon fa-solid fa-chevron-right"></i>
                         </li>
-                        <li class="product-path-item-current-name ">Máy ảnh Canon EOS RP ( Body / Kit )</li>
+                        <li class="product-path-item-current-name ">Tủ chống ẩm 30 lít</li>
                     </ul>
                 </div>
                 <div class="product-content">
@@ -261,14 +261,14 @@
                             <div class="product-image">
                                 <div class="product-image-preview">
                                     <div class="product-image-preview-top">
-                                        <img class="product-image-preview-top-img" src="https://down-vn.img.susercontent.com/file/b85cecd1da8d985c969009c2c60321f0" alt="">
+                                        <img class="product-image-preview-top-img" src="https://down-vn.img.susercontent.com/file/51874d69bbf625d69f0e2c3d9e07d9ba" alt="">
                                         <!-- <img class="product-image-preview-top-img1" src="https://down-vn.img.susercontent.com/file/vn-50009109-d851329f3c4a8c69292bbb5fd791186b" alt=""> -->
                                     </div>
                                     <div class="product-image-preview-bottom">
-                                        <img class="product-image-preview-bottom-img" src="https://down-vn.img.susercontent.com/file/b85cecd1da8d985c969009c2c60321f0_tn" onmouseover="displayLargeImage(this)" alt="">
-                                        <img class="product-image-preview-bottom-img" src="https://down-vn.img.susercontent.com/file/2e7be73cef259506f59e4af57b2f92c3_tn" onmouseover="displayLargeImage(this)" alt="">
-                                        <img class="product-image-preview-bottom-img" src="https://down-vn.img.susercontent.com/file/aaba81687348073a06707f5350642f8c_tn" onmouseover="displayLargeImage(this)" alt="">
-                                        <img class="product-image-preview-bottom-img" src="https://down-vn.img.susercontent.com/file/21a21e8f228754d10ad68aa8a00ff6ff_tn" onmouseover="displayLargeImage(this)" alt="">
+                                        <img class="product-image-preview-bottom-img" src="https://down-vn.img.susercontent.com/file/51874d69bbf625d69f0e2c3d9e07d9ba" onmouseover="displayLargeImage(this)" alt="">
+                                        <img class="product-image-preview-bottom-img" src="https://down-vn.img.susercontent.com/file/200023d2bf4ef51d814bc2b720c75836_tn" onmouseover="displayLargeImage(this)" alt="">
+                                        <!-- <img class="product-image-preview-bottom-img" src="https://down-vn.img.susercontent.com/file/aaba81687348073a06707f5350642f8c_tn" onmouseover="displayLargeImage(this)" alt="">
+                                        <img class="product-image-preview-bottom-img" src="https://down-vn.img.susercontent.com/file/21a21e8f228754d10ad68aa8a00ff6ff_tn" onmouseover="displayLargeImage(this)" alt=""> -->
                                     </div>
                                 </div>
                                 <div class="product-likesrate">
@@ -280,37 +280,37 @@
                             <div class="product-info">
                                 <!-- <div class="product-info-favorite">
                                     <span>Yêu thích</span></div> -->
-                                <span class="product-info-name">Máy ảnh Canon EOS RP ( Body / Kit )</span>
+                                <span class="product-info-name">Tủ chống ẩm 30 lít</span>
                                 <div class="product-soldcount">
-                                    <span class="product-soldcount-rate">Chưa Có Đánh Giá</span>
+                                    <span class="product-soldcount-rate">71 Đánh Giá</span>
                                     <div class="product-soldcount-num">
-                                        <span class="product-soldcount-num-number">5</span>
+                                        <span class="product-soldcount-num-number">246</span>
                                         <span class="product-soldcount-num-text">Đã Bán</span>
                                     </div>
                                     <button class="product-soldcount-report">Tố Cáo</button>
                                 </div>
-                                <div class="product-price">₫29.590.000 - ₫62.370.000</div>
+                                <div class="product-price">₫949.000</div>
                                 <div class="product-contain">
-                                    <div class="product-contain-coupon">
+                                    <!-- <div class="product-contain-coupon">
                                         <div class="product-contain-coupon-lable">Mã Giảm Giá Của Shop</div>
                                         <div class="product-contain-coupon-mini">
                                             <span class="product-contain-coupon-ticket">Giảm ₫300k</span>
                                             <span class="product-contain-coupon-ticket">Giảm ₫10k</span>
                                         </div>
-                                    </div>
-                                    <div class="product-contain-installment">
+                                    </div> -->
+                                    <!-- <div class="product-contain-installment">
                                         <div class="product-contain-installment-lable">0% TRẢ GÓP</div>
                                         <div class="product-contain-installment-contain">12 tháng x ₫2.465.833 (Lãi suất 0%)</div>
                                         <button class="product-contain-installment-btn">Xem thêm
                                             <i class="product-contain-installment-icon fa-solid fa-angle-right fa-sm"></i>
                                         </button>
-                                    </div>
-                                    <div class="product-contain-insurance">
+                                    </div> -->
+                                    <!-- <div class="product-contain-insurance">
                                         <div class="product-contain-insurance-lable">Bảo Hiểm</div>
                                         <div class="product-contain-insurance-contain">Bảo hiểm Thiết bị điện tử</div>
                                         <div class="product-contain-insurance-icon">Mới</div>
                                         <a href="" class="product-contain-insurance-link">Tìm hiểu thêm</a>
-                                    </div>
+                                    </div> -->
                                     <div class="product-contain-shipping">
                                         <div class="product-contain-shipping-lable">Vận Chuyển</div>
                                         <div class="product-contain-shipping-contain">
@@ -338,11 +338,11 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="product-contain-classify">
+                                    <!-- <div class="product-contain-classify">
                                         <div class="product-contain-classify-lable">Phân Loại</div>
                                         <button class="product-contain-classify-btn" onclick="selectButton(this)">Body</button>
                                         <button class="product-contain-classify-btn" onclick="selectButton(this)">Kit RF 24-105</button>
-                                    </div>
+                                    </div> -->
                                     <div class="product-contain-classify-quantity">
                                         <div class="product-contain-classify-quantity-lable">Số Lượng</div>
                                         <button class="product-contain-classify-quantity-btn" onclick="changeQuantity(-1)">
@@ -352,7 +352,7 @@
                                         <button class="product-contain-classify-quantity-btn" onclick="changeQuantity(1)">
                                             <i class="product-contain-classify-quantity-btn-plus fa-solid fa-plus"></i>
                                         </button>
-                                        <div class="product-contain-classify-quantity-remain">10 sản phẩm có sẵn</div>
+                                        <div class="product-contain-classify-quantity-remain">108 sản phẩm có sẵn</div>
                                     </div>
                                     <div class="product-contain-buy-options">
                                         <button class="product-contain-puttocart">
@@ -386,58 +386,71 @@
                                                         <a class="product-specification-details-item-link" href="">Máy Ảnh & Máy Quay Phim</a><i class="product-specification-details-path-item-icon fa-solid fa-chevron-right"></i>
                                                     </li>
                                                     <li class="product-specification-details-path-item">
-                                                        <a class="product-specification-details-item-link" href="">Máy ảnh - Máy quay phim</a><i class="product-specification-details-path-item-icon fa-solid fa-chevron-right"></i>
+                                                        <a class="product-specification-details-item-link" href="">Phụ kiện máy ảnh</a><i class="product-specification-details-path-item-icon fa-solid fa-chevron-right"></i>
                                                     </li>
                                                     <li class="product-specification-details-path-item">
-                                                        <a class="product-specification-details-item-link" href="">Máy ảnh không gương lật</a>
+                                                        <a class="product-specification-details-item-link" href="">Dụng cụ vệ sinh máy ảnh</a>
                                                     </li>
                                                 </ul>
                                             </div>
                                         </li>
-                                        <li class="product-specification-details-item">
+                                        <!-- <li class="product-specification-details-item">
                                             <div class="product-specification-details-item-lable">Thương hiệu</div>
                                             <div class="product-specification-details-item-content">
                                                 <a class="product-specification-details-item-link" href="">Canon</a>
                                             </div>
-                                        </li>
-                                        <li class="product-specification-details-item">
-                                            <div class="product-specification-details-item-lable">Hạn bảo hành</div>
-                                            <div class="product-specification-details-item-content">24 tháng</div>
-                                        </li>
+                                        </li> -->
                                         <li class="product-specification-details-item">
                                             <div class="product-specification-details-item-lable">Loại bảo hành</div>
                                             <div class="product-specification-details-item-content">Bảo hành nhà sản xuất</div>
                                         </li>
                                         <li class="product-specification-details-item">
-                                            <div class="product-specification-details-item-lable">Trọng lượng</div>
-                                            <div class="product-specification-details-item-content">500g</div>
+                                            <div class="product-specification-details-item-lable">Hạn bảo hành</div>
+                                            <div class="product-specification-details-item-content">5 năm</div>
+                                        </li>
+                                        <li class="product-specification-details-item">
+                                            <div class="product-specification-details-item-lable">Dung tích</div>
+                                            <div class="product-specification-details-item-content">30L</div>
                                         </li>
                                         <li class="product-specification-details-item">
                                             <div class="product-specification-details-item-lable">Kho hàng</div>
-                                            <div class="product-specification-details-item-content">20</div>
+                                            <div class="product-specification-details-item-content">108</div>
                                         </li>
                                         <li class="product-specification-details-item">
                                             <div class="product-specification-details-item-lable">Gửi từ</div>
-                                            <div class="product-specification-details-item-content">TP. Hồ Chí Minh</div>
+                                            <div class="product-specification-details-item-content">Nam Định</div>
                                         </li>
                                     </ul>
                                 </div>
                                 <div class="product-specification-details-bottom">
                                     <header class="product-specification-details-header">MÔ TẢ SẢN PHẨM</header>
                                     <div class="product-specification-details-item-describe">
-                                        <p class="product-specification-details-item-describe-paragraph">TÍNH NĂNG NỔI BẬT 
-                                            Cảm biến CMOS full-frame 26.2 megapixels
-                                            Bộ xử lý hình ảnh DIGIC 8
-                                            - 4.779 vị trí lấy nét chọn lọc
-                                            Màn hình LCD 3.0inch cảm ứng
-                                            Tốc độ màn trập	30 1/4000 giây
-                                            Tốc độ chụp	5 ảnh/ giây
-                                            Độ nhạy sáng ISO 100 40000 (mở rộng 102400)
-                                            Quay phim 4K 3840 x 2160 (30p)
-                                            Chống rung quang học kép Dual Sensing IS
-                                            Tích hợp Wifi/ Bluetooth
-                                            Trọng lượng	485g (thân máy)
-                                            Pin tương thích	LP-E17
+                                        <p class="product-specification-details-item-describe-paragraph">Dung tích 30L
+                                            Kích thước sản phẩm ( trong ) : W298xD318xH355mm
+                                            Kích thước sản phẩm ( ngoài ) : W300xD320xH410mm
+                                            - Kích thước cả thùng :                W380 xD400 xH490 mm
+                                            - Trọng lượng sản phẩm :   7,6 kg
+                                            - Trọng lượng cả bao bì :     8,8 kg
+                                            - Công suất: 5W
+                                            - Nguồn điện: 100-240V
+                                            - Thiết kế cửa thủy tinh cường lực kín ,dày 4mm, chống ẩm-bẩn và đạt độ kín cao.
+                                            - Tủ có 1 cửa và 1 ổ khóa bảo vệ bằng inox chống gỉ '
+                                            - Tủ có một khay nhựa,chia tủ thành hai ngăn.
+                                            - Trên tủ được gắn 1 đồng hồ báo độ ẩm điện tư
+                                            - Máy  hút ẩm hiệu quả yên tĩnh, khử ẩm hiệu quả nhanh
+                                            - Điều đặc biệt bề mặt tủ làm bằng thép
+                                            - Toàn bộ tủ được sơn tĩnh điện 2 lớp màu đen
+                                            - Bảo hành 5 năm.
+                                            Tính năng:
+                                            - Tiết kiệm điện năng
+                                            - Tốc độ hút ẩm nhanh gấp 10 lần so với sản phẩm khác
+                                            - Kính cách nhiệt được làm bằng chất liệu đặc biệt
+                                            - Bảo quản trong thiết bị y tế
+                                            - Bảo quản trong điện tử - IC –Chip…
+                                            - Bảo quản trong nghành IN
+                                            - Bảo quản trang thiết bị vật tư ngành ảnh
+                                            - Phục vụ trong gia đình, bảo quản thuốc tân dược, máy ảnh cá nhân, băng đĩa hình quý
+                                            - Phục vụ bảo quản hiện vật trong ngành bảo tàng , quân đội…
                                         </p>
                                     </div>
                                 </div>
