--- a/product5.html
+++ b/product5.html
@@ -252,7 +252,7 @@
                         <li class="product-path-item">
                             <a class="product-path-link" href="">Máy ảnh không gương lật</a><i class="product-path-icon fa-solid fa-chevron-right"></i>
                         </li>
-                        <li class="product-path-item-current-name ">Máy ảnh Canon EOS RP ( Body / Kit )</li>
+                        <li class="product-path-item-current-name ">Đầu đọc thẻ nhớ Micro Sd cổng usb, đầu lọc thẻ nhớ mini dùng cho máy tính, laptop, otg, loa đài cắm là nhận</li>
                     </ul>
                 </div>
                 <div class="product-content">
@@ -261,14 +261,14 @@
                             <div class="product-image">
                                 <div class="product-image-preview">
                                     <div class="product-image-preview-top">
-                                        <img class="product-image-preview-top-img" src="https://down-vn.img.susercontent.com/file/b85cecd1da8d985c969009c2c60321f0" alt="">
+                                        <img class="product-image-preview-top-img" src="https://down-vn.img.susercontent.com/file/vn-11134201-23030-bm2f0cgnsuov63" alt="">
                                         <!-- <img class="product-image-preview-top-img1" src="https://down-vn.img.susercontent.com/file/vn-50009109-d851329f3c4a8c69292bbb5fd791186b" alt=""> -->
                                     </div>
                                     <div class="product-image-preview-bottom">
-                                        <img class="product-image-preview-bottom-img" src="https://down-vn.img.susercontent.com/file/b85cecd1da8d985c969009c2c60321f0_tn" onmouseover="displayLargeImage(this)" alt="">
-                                        <img class="product-image-preview-bottom-img" src="https://down-vn.img.susercontent.com/file/2e7be73cef259506f59e4af57b2f92c3_tn" onmouseover="displayLargeImage(this)" alt="">
-                                        <img class="product-image-preview-bottom-img" src="https://down-vn.img.susercontent.com/file/aaba81687348073a06707f5350642f8c_tn" onmouseover="displayLargeImage(this)" alt="">
-                                        <img class="product-image-preview-bottom-img" src="https://down-vn.img.susercontent.com/file/21a21e8f228754d10ad68aa8a00ff6ff_tn" onmouseover="displayLargeImage(this)" alt="">
+                                        <img class="product-image-preview-bottom-img" src="https://down-vn.img.susercontent.com/file/vn-11134201-23030-bm2f0cgnsuov63" onmouseover="displayLargeImage(this)" alt="">
+                                        <img class="product-image-preview-bottom-img" src="https://down-vn.img.susercontent.com/file/f6f3038e3d2330ac18896989d01cf465" onmouseover="displayLargeImage(this)" alt="">
+                                        <img class="product-image-preview-bottom-img" src="https://down-vn.img.susercontent.com/file/555b31066374cce93af6bda9570967da" onmouseover="displayLargeImage(this)" alt="">
+                                        <img class="product-image-preview-bottom-img" src="https://down-vn.img.susercontent.com/file/b44d9cabb24005590016ed4389215443" onmouseover="displayLargeImage(this)" alt="">
                                     </div>
                                 </div>
                                 <div class="product-likesrate">
@@ -280,25 +280,28 @@
                             <div class="product-info">
                                 <!-- <div class="product-info-favorite">
                                     <span>Yêu thích</span></div> -->
-                                <span class="product-info-name">Máy ảnh Canon EOS RP ( Body / Kit )</span>
+                                <span class="product-info-name">Đầu đọc thẻ nhớ Micro Sd cổng usb, đầu lọc thẻ nhớ mini dùng cho máy tính, laptop, otg, loa đài cắm là nhận</span>
                                 <div class="product-soldcount">
-                                    <span class="product-soldcount-rate">Chưa Có Đánh Giá</span>
+                                    <span class="product-soldcount-rate">764 Đánh Giá</span>
                                     <div class="product-soldcount-num">
-                                        <span class="product-soldcount-num-number">5</span>
+                                        <span class="product-soldcount-num-number">7,8k</span>
                                         <span class="product-soldcount-num-text">Đã Bán</span>
                                     </div>
                                     <button class="product-soldcount-report">Tố Cáo</button>
                                 </div>
-                                <div class="product-price">₫29.590.000 - ₫62.370.000</div>
+                                <div class="product-price">
+                                    <span class="product-price-old">₫8.000</span>
+                                    ₫3.876</div>
                                 <div class="product-contain">
                                     <div class="product-contain-coupon">
                                         <div class="product-contain-coupon-lable">Mã Giảm Giá Của Shop</div>
                                         <div class="product-contain-coupon-mini">
-                                            <span class="product-contain-coupon-ticket">Giảm ₫300k</span>
+                                            <span class="product-contain-coupon-ticket">Giảm ₫3k</span>
                                             <span class="product-contain-coupon-ticket">Giảm ₫10k</span>
+                                            <span class="product-contain-coupon-ticket">Giảm ₫20k</span>
                                         </div>
                                     </div>
-                                    <div class="product-contain-installment">
+                                    <!-- <div class="product-contain-installment">
                                         <div class="product-contain-installment-lable">0% TRẢ GÓP</div>
                                         <div class="product-contain-installment-contain">12 tháng x ₫2.465.833 (Lãi suất 0%)</div>
                                         <button class="product-contain-installment-btn">Xem thêm
@@ -310,17 +313,17 @@
                                         <div class="product-contain-insurance-contain">Bảo hiểm Thiết bị điện tử</div>
                                         <div class="product-contain-insurance-icon">Mới</div>
                                         <a href="" class="product-contain-insurance-link">Tìm hiểu thêm</a>
-                                    </div>
+                                    </div> -->
                                     <div class="product-contain-shipping">
                                         <div class="product-contain-shipping-lable">Vận Chuyển</div>
                                         <div class="product-contain-shipping-contain">
-                                            <div class="product-contain-shipping-freeship">
+                                            <!-- <div class="product-contain-shipping-freeship">
                                                 <img class="product-contain-shipping-freeship-img" src="https://deo.shopeemobile.com/shopee/shopee-pcmall-live-sg/74f3e9ac01da8565c3baead996ed6e2a.png" alt="">
                                                 <div class="product-contain-shipping-freeship-text">
                                                     <div class="product-contain-shipping-freeship-text-top">Miễn phí vận chuyển</div>
                                                     <div class="product-contain-shipping-freeship-text-bottom">Miễn phí vận chuyển cho đơn hàng trên ₫99.000</div>
                                                 </div>
-                                            </div>
+                                            </div> -->
                                             <div class="product-contain-shipping-options">
                                                 <i class="product-contain-shipping-options-icon fa-solid fa-truck fa-lg"></i>
                                                 <div class="product-contain-shipping-options-text">
@@ -338,11 +341,11 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="product-contain-classify">
+                                    <!-- <div class="product-contain-classify">
                                         <div class="product-contain-classify-lable">Phân Loại</div>
                                         <button class="product-contain-classify-btn" onclick="selectButton(this)">Body</button>
                                         <button class="product-contain-classify-btn" onclick="selectButton(this)">Kit RF 24-105</button>
-                                    </div>
+                                    </div> -->
                                     <div class="product-contain-classify-quantity">
                                         <div class="product-contain-classify-quantity-lable">Số Lượng</div>
                                         <button class="product-contain-classify-quantity-btn" onclick="changeQuantity(-1)">
@@ -352,7 +355,7 @@
                                         <button class="product-contain-classify-quantity-btn" onclick="changeQuantity(1)">
                                             <i class="product-contain-classify-quantity-btn-plus fa-solid fa-plus"></i>
                                         </button>
-                                        <div class="product-contain-classify-quantity-remain">10 sản phẩm có sẵn</div>
+                                        <div class="product-contain-classify-quantity-remain">3346 sản phẩm có sẵn</div>
                                     </div>
                                     <div class="product-contain-buy-options">
                                         <button class="product-contain-puttocart">
@@ -386,58 +389,59 @@
                                                         <a class="product-specification-details-item-link" href="">Máy Ảnh & Máy Quay Phim</a><i class="product-specification-details-path-item-icon fa-solid fa-chevron-right"></i>
                                                     </li>
                                                     <li class="product-specification-details-path-item">
-                                                        <a class="product-specification-details-item-link" href="">Máy ảnh - Máy quay phim</a><i class="product-specification-details-path-item-icon fa-solid fa-chevron-right"></i>
+                                                        <a class="product-specification-details-item-link" href="">Phụ Kiện Máy Ảnh</a><i class="product-specification-details-path-item-icon fa-solid fa-chevron-right"></i>
                                                     </li>
                                                     <li class="product-specification-details-path-item">
-                                                        <a class="product-specification-details-item-link" href="">Máy ảnh không gương lật</a>
+                                                        <a class="product-specification-details-item-link" href="">Bộ chia cổng USB & Đọc thẻ nhớ</a>
                                                     </li>
                                                 </ul>
                                             </div>
                                         </li>
-                                        <li class="product-specification-details-item">
+                                        <!-- <li class="product-specification-details-item">
                                             <div class="product-specification-details-item-lable">Thương hiệu</div>
                                             <div class="product-specification-details-item-content">
                                                 <a class="product-specification-details-item-link" href="">Canon</a>
                                             </div>
+                                        </li> -->
+                                        <li class="product-specification-details-item">
+                                            <div class="product-specification-details-item-lable">Cổng/ Giao diện</div>
+                                            <div class="product-specification-details-item-content">USB 2.0</div>
                                         </li>
                                         <li class="product-specification-details-item">
                                             <div class="product-specification-details-item-lable">Hạn bảo hành</div>
-                                            <div class="product-specification-details-item-content">24 tháng</div>
+                                            <div class="product-specification-details-item-content">3 tháng</div>
                                         </li>
                                         <li class="product-specification-details-item">
                                             <div class="product-specification-details-item-lable">Loại bảo hành</div>
-                                            <div class="product-specification-details-item-content">Bảo hành nhà sản xuất</div>
+                                            <div class="product-specification-details-item-content">Bảo hành nhà cung cấp</div>
                                         </li>
                                         <li class="product-specification-details-item">
-                                            <div class="product-specification-details-item-lable">Trọng lượng</div>
-                                            <div class="product-specification-details-item-content">500g</div>
+                                            <div class="product-specification-details-item-lable">Loại cáp điện thoại</div>
+                                            <div class="product-specification-details-item-content">Micro USB</div>
                                         </li>
                                         <li class="product-specification-details-item">
-                                            <div class="product-specification-details-item-lable">Kho hàng</div>
+                                            <div class="product-specification-details-item-lable">3346</div>
                                             <div class="product-specification-details-item-content">20</div>
                                         </li>
                                         <li class="product-specification-details-item">
                                             <div class="product-specification-details-item-lable">Gửi từ</div>
-                                            <div class="product-specification-details-item-content">TP. Hồ Chí Minh</div>
+                                            <div class="product-specification-details-item-content">Hà Nội</div>
                                         </li>
                                     </ul>
                                 </div>
                                 <div class="product-specification-details-bottom">
                                     <header class="product-specification-details-header">MÔ TẢ SẢN PHẨM</header>
                                     <div class="product-specification-details-item-describe">
-                                        <p class="product-specification-details-item-describe-paragraph">TÍNH NĂNG NỔI BẬT 
-                                            Cảm biến CMOS full-frame 26.2 megapixels
-                                            Bộ xử lý hình ảnh DIGIC 8
-                                            - 4.779 vị trí lấy nét chọn lọc
-                                            Màn hình LCD 3.0inch cảm ứng
-                                            Tốc độ màn trập	30 1/4000 giây
-                                            Tốc độ chụp	5 ảnh/ giây
-                                            Độ nhạy sáng ISO 100 40000 (mở rộng 102400)
-                                            Quay phim 4K 3840 x 2160 (30p)
-                                            Chống rung quang học kép Dual Sensing IS
-                                            Tích hợp Wifi/ Bluetooth
-                                            Trọng lượng	485g (thân máy)
-                                            Pin tương thích	LP-E17
+                                        <p class="product-specification-details-item-describe-paragraph">Đầu đọc thẻ nhớ Micro Sd cổng usb, đầu lọc thẻ nhớ mini dùng cho máy tính, laptop, otg, loa đài cắm là nhận
+
+                                            - Cắm vào sử dụng ko cần cài driver 
+                                            - Giao diện cắm: USB                                         
+                                            - Thẻ hỗ trợ: Thẻ nhớ SD2.0/SD/MMC                                     
+                                            - Bộ chuyển đổi thẻ micro SD của bạn sang ổ đĩa USB                                     
+                                            - Thiết kế nhỏ gọn và di động                                    
+                                             - Phù hơp để sử dụng di động trên đường hoặc ở nhà với máy tính để bàn hoặc máy tính, dữ liệu và hình ảnh của bạn có thể được chuyển ngay lập tức vào PC / notebook của bạn                             
+                                                   
+                                            #daudocthenho #daudocthe #daudocthenho2.0 #daudocthenho3.0 #daudochthesd #daudocthecf #daudocthenhosd #daudocthenhomayanh #daulocthenho #daulocthe #daulocthenhomayanh #daulocthesd #thenho #tf #otg #usb #vnstore9999
                                         </p>
                                     </div>
                                 </div>
